2017-02-22  Aakash Jain  <aakash_jain@apple.com>

        Move iOS specific symbols to WebKit.ios.exp
        https://bugs.webkit.org/show_bug.cgi?id=168726

        Reviewed by Alexey Proskuryakov.

        * WebKit.exp:

2017-02-21  Youenn Fablet  <youenn@apple.com>

        [WebRTC][Mac] Activate libwebrtc
        https://bugs.webkit.org/show_bug.cgi?id=167293
        <rdar://problem/30401864>

        Reviewed by Alex Christensen.

        * Configurations/FeatureDefines.xcconfig:

2017-02-21  Aakash Jain  <aakash_jain@apple.com>

        Export various NSString symbols from WebFramePrivate.h
        https://bugs.webkit.org/show_bug.cgi?id=168702

        Reviewed by Alexey Proskuryakov.

        * WebKit.exp:

2017-02-21  Aakash Jain  <aakash_jain@apple.com>

        Export various NSString symbols from WebPreferencesPrivate.h
        https://bugs.webkit.org/show_bug.cgi?id=168701

        Reviewed by Alexey Proskuryakov.

        * WebKit.exp:

2017-02-21  Joseph Pecoraro  <pecoraro@apple.com>

        Add missing WebConsoleMessage string key
        https://bugs.webkit.org/show_bug.cgi?id=168690

        Reviewed by Alexey Proskuryakov.

        * WebKit.exp:
        * WebView/WebUIDelegatePrivate.h:
        This key has an implementation but was not extern / exported like the others.

2017-02-21  Aakash Jain  <aakash_jain@apple.com>

        Export various NSString symbols from WebViewPrivate.h
        https://bugs.webkit.org/show_bug.cgi?id=168689

        Reviewed by Alexey Proskuryakov.

        * WebKit.exp:

2017-02-21  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r212768.
        https://bugs.webkit.org/show_bug.cgi?id=168698

        Rolling out since this would break other projects. (Requested
        by aakashjain on #webkit).

        Reverted changeset:

        "[iOS] Remove old WebKit1 MemoryMeasure helper."
        https://bugs.webkit.org/show_bug.cgi?id=168675
        http://trac.webkit.org/changeset/212768
