@@ -1,5 +1,15 @@
 2017-02-22  Aakash Jain  <aakash_jain@apple.com>
 
+        Move instance members from WKQuadObject to implementation file
+        https://bugs.webkit.org/show_bug.cgi?id=168740
+
+        Reviewed by Tim Horton.
+
+        * DOM/DOM.mm: Moving instance member to implementation file.
+        * DOM/DOMExtensions.h: Ditto.
+
+2017-02-22  Aakash Jain  <aakash_jain@apple.com>
+
         Move iOS specific symbols to WebKit.ios.exp
         https://bugs.webkit.org/show_bug.cgi?id=168726
 
